@@ -15,6 +15,8 @@ Release 0.5.5.11
 	- Feature request ID: 3576692
 	  Report "show group"
 	  
+	- Bug Fix in LDAP connect, wrong protocol version was used
+	  
 	  
 	Thanks to Tobias for sending a lot of patches
 	
